# Examiner

./: .gitignore  CMakeLists.txt  README.md  test_update.db
core/: CMakeLists.txt  exam.cpp  exam.h  user.cpp  user.h  util.cpp  util.h
db/: CMakeLists.txt  dataio.cpp  dataio.h  dataio_delete.cpp  dataio_insert.cpp  dataio_select.cpp  dataio_update.cpp  schema.h  schema.sql
examiner/: CMakeLists.txt  admin.cpp  exam.h  student.cpp  util.cpp
test/db/: CMakeLists.txt  exam_integration_test.cpp  test_insert.cpp  test_update.cpp
ui/: CMakeLists.txt  adminui.cpp  adminui.h  login.cpp  login.h  studentui.cpp  studentui.h
